[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phastphase"
readme = "README_PYPI.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies", "description", "authors"]

[project.urls]
"Homepage" = "https://github.com/slmsuite/phastphase"
"Documentation" = "https://phastphase.readthedocs.io/en/latest/"
